--- a/Desafio 009/idex.html
+++ b/Desafio 009/idex.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <hr>
-    <h1>Videos Legais para assistir</h2>
+    <h1>Videos Legais para assistir :D</h2>
     <hr>
 
     <a href="file:///C:/Users/Diego/Documents/Estudos/Html_Css/Exercicios/Desafio%20009/Had/idex.html"><img src="thumb-hardware.png" alt="hadware"></a>
